--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(120deg, #40d640, #065f06);
+  background-image: linear-gradient(120deg, rgba(64, 214, 64, 0.7), rgba(6, 95, 6, 0.7));
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -132,6 +132,8 @@ body {
   margin-left: -3.7rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  position: relative;
+  z-index: 10;
 }
 
 .todo .add-btn:hover {
@@ -199,6 +201,9 @@ body {
           flex: 1;
   text-align: left;
   padding-left: 1rem;
+  white-space: nowrap;
+  width: 50%;
+  overflow-x: hidden;
 }
 
 .todos .check-btn,
@@ -214,7 +219,7 @@ body {
 }
 
 .todos .check-btn {
-  margin-right: 2px;
+  margin-right: 1px;
   color: black;
 }
 
