--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,11 @@ html {
 }
 
 body {
-  background-image: linear-gradient(120deg, rgb(64, 214, 64), rgb(6, 95, 6));
+  background-image: linear-gradient(
+    120deg,
+    rgba(64, 214, 64, 0.7),
+    rgba(6, 95, 6, 0.7)
+  );
   @include felxCenter();
   min-height: 100vh;
 }
@@ -95,6 +99,8 @@ body {
     background-color: rgba(255, 255, 255, 0.7);
     margin-left: -3.7rem;
     transition: 0.5s;
+    position: relative;
+    z-index: 10;
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.9);
@@ -149,6 +155,9 @@ body {
     flex: 1;
     text-align: left;
     padding-left: 1rem;
+    white-space: nowrap;
+    width: 50%;
+    overflow-x: hidden;
   }
 
   .check-btn,
@@ -163,7 +172,7 @@ body {
   }
 
   .check-btn {
-    margin-right: 2px;
+    margin-right: 1px;
     color: black;
 
     .check-icon {
